update sidebar and navabar

--- a/angular.json
+++ b/angular.json
@@ -7,7 +7,10 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "scss"
+          "style": "scss",
+          "inlineStyle": true, 
+          "inlineTemplate": false,
+          "skipTests": true
         }
       },
       "root": "",
@@ -28,7 +31,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "./node_modules/flowbite/dist/flowbite.css"
             ],
             "scripts": []
           },
@@ -103,5 +107,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "2f6903ab-66df-4f98-92ed-0f3aecab6a19"
   }
 }
