--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@ngxs/store": "^3.7.4",
     "autoprefixer": "^10.4.20",
     "flowbite": "^2.5.1",
     "postcss": "^8.4.47",
