--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,9 @@
               "src/styles.scss",
               "./node_modules/flowbite/dist/flowbite.css"
             ],
-            "scripts": []
+            "scripts": [
+              
+            ]
           },
           "configurations": {
             "production": {
