--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "start:mock": "json-server --watch db.json --port 3000"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.0",
+    "@angular/animations": "^14.3.0",
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
@@ -21,6 +22,7 @@
     "@ngxs/store": "^3.7.4",
     "autoprefixer": "^10.4.20",
     "flowbite": "^2.5.1",
+    "ngx-toastr": "^14.3.0",
     "postcss": "^8.4.47",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -32,6 +34,7 @@
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
+    "json-server": "^1.0.0-beta.3",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
