--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/cli": "~14.2.13",
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
+    "@types/uuid": "^10.0.0",
     "jasmine-core": "~4.3.0",
     "json-server": "^1.0.0-beta.3",
     "karma": "~6.4.0",
